added pods folder to gitignore. added pods to test target.

--- a/SampleApp/Podfile
+++ b/SampleApp/Podfile
@@ -4,3 +4,6 @@ target 'ConsistencyManagerDemo' do
 	pod 'ConsistencyManager', :path => '..'
 end
 
+target 'ConsistencyManagerDemoTests' do
+    pod 'ConsistencyManager', :path => '..'
+end
