--- a/SampleApp/Podfile
+++ b/SampleApp/Podfile
@@ -7,3 +7,12 @@ end
 target 'ConsistencyManagerDemoTests' do
     pod 'ConsistencyManager', :path => '..'
 end
+
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['SWIFT_VERSION'] = '3.0'
+        end
+    end
+end
+
