--- a/SampleApp/Podfile
+++ b/SampleApp/Podfile
@@ -8,6 +8,9 @@ target 'ConsistencyManagerDemoTests' do
     pod 'ConsistencyManager', :path => '..'
 end
 
+# This is necessary to convert the target to swift 3
+# This isn't detected automatically by cocoapods or supported in the podspec
+# We can remove this once Cocoapods has a better solution
 post_install do |installer|
     installer.pods_project.targets.each do |target|
         target.build_configurations.each do |config|
