--- a/ConsistencyManager.xcodeproj/xcshareddata/xcschemes/ConsistencyManager.xcscheme
+++ b/ConsistencyManager.xcodeproj/xcshareddata/xcschemes/ConsistencyManager.xcscheme
@@ -93,12 +93,7 @@
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES"
-      launchAutomaticallySubstyle = "2">
-      <PathRunnable
-         runnableDebuggingMode = "0"
-         FilePath = "/Users/plivesey/Library/Developer/Xcode/DerivedData/ConsistencyManager-ezmcupkggqbxrkawtipbzcwqqolg/Build/Products/ConsistencyManager">
-      </PathRunnable>
+      debugDocumentVersioning = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
