Disabled testRetainCycle() for now. refer to: #62

--- a/.swiftpm/xcode/xcshareddata/xcschemes/ConsistencyManager.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/ConsistencyManager.xcscheme
@@ -44,7 +44,8 @@
       codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "ConsistencyManagerTests"
@@ -52,6 +53,11 @@
                BlueprintName = "ConsistencyManagerTests"
                ReferencedContainer = "container:">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "ListenerTests/testRetainCycle()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
